--- a/gb/21/3/18/n12820071.md
+++ b/gb/21/3/18/n12820071.md
@@ -1,14 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cxovwc3509/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cxovwc3509/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/cxovwc3509/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cxovwc3509/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/cxovwc3509/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cxovwc3509/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/cxovwc3509/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cxovwc3509/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/cxovwc3509/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cxovwc3509/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/cxovwc3509/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cxovwc3509/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/cxovwc3509/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cxovwc3509/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/cxovwc3509/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cxovwc3509/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/cxovwc3509/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cxovwc3509/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/cxovwc3509/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cxovwc3509/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cxovwc3509/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cxovwc3509/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cxovwc3509/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cxovwc3509/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cxovwc3509/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cxovwc3509/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cxovwc3509/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cxovwc3509/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cxovwc3509/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cxovwc3509/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cxovwc3509/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cxovwc3509/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cxovwc3509/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cxovwc3509/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cxovwc3509/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cxovwc3509/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cxovwc3509/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cxovwc3509/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cxovwc3509/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cxovwc3509/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cxovwc3509/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cxovwc3509/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cxovwc3509/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cxovwc3509/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cxovwc3509/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cxovwc3509/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cxovwc3509/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【名家专栏】对抗马克思主义的美国堡垒</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2021/03/Trump-700x420-600x400.jpg" />
-<h6>2020年7月4日，美国总统唐纳德?川普和第一夫人梅拉尼娅?川普在白宫南草坪举办“向美国致敬”活动，以纪念独立日。(Saul Loeb/AFP via Getty Images)
-</h6>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2021/03/pp1@1200x1200-600x400.jpg" />
+<h6></h6>
 <hr>
-	<p>【大纪元2021年03月18日讯】（英文大纪元专栏作家David Flint撰文／原泉编译）为什么在所有国家中，美国是新<ahref="https://github.com/cxovwc3509/djy/blob/master/gb/tag/%E9%A9%AC%E5%85%8B%E6%80%9D%E4%B8%BB%E4%B9%89.md#1">马克思主义</a>思想的世界中心？</p>
-<p>当今，从美国各地传出的新<ahref="https://github.com/cxovwc3509/djy/blob/master/gb/tag/%E9%A9%AC%E5%85%8B%E6%80%9D%E4%B8%BB%E4%B9%89.md#1">马克思主义</a>教条层出不穷，其累积效应是破坏宗教、家庭、私有财产、法治、诚实公正的选举，尤其破坏了美国例外论（American exceptionalism），包括《美国宪法》。任何一个教条都不能孤立地看待，其总目标是打倒美国和西方。计划中可能结果将是北京乘虚而入。</p>
+	<p>【大纪元2021年03月18日讯】（英文大纪元专栏作家David Flint撰文／原泉编译）为什么在所有国家中，美国是新<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E9%A9%AC%E5%85%8B%E6%80%9D%E4%B8%BB%E4%B9%89.md#1">马克思主义</a>思想的世界中心？</p>
+<p>当今，从美国各地传出的新<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E9%A9%AC%E5%85%8B%E6%80%9D%E4%B8%BB%E4%B9%89.md#1">马克思主义</a>教条层出不穷，其累积效应是破坏宗教、家庭、私有财产、法治、诚实公正的选举，尤其破坏了美国例外论（American exceptionalism），包括《美国宪法》。任何一个教条都不能孤立地看待，其总目标是打倒美国和西方。计划中可能结果将是北京乘虚而入。</p>
 <p>（译者注：美国例外论是法国政治理论家托克维尔1831年创造的这个概念，指美利坚合众国因具独一无二之国家起源、文教背景、历史进展，以及突出的政策与宗教体制，故世上其它发达国家皆无可比拟。）</p>
+<p><strong>听新闻：</strong></p>
+<div style="width: 100%; height: 170px; margin-bottom: 20px; border-radius: 10px; overflow:hidden;"><a style="width: 100%; height: 170px;" frameborder="no" scrolling="no" seamless src="https://player.captivate.fm/episode/e6344ec2-2f96-481d-8614-5bb2948333f1"></a></div>
+<p><strong>（听更多请至<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/podcast.md#1">“听纪元”</a>平台）</strong></p>
 <p>直到1941年珍珠港遇袭，美国才不情愿地接受政治和外交上的领导角色，这一角色必然地源于她当时在经济、军事和日益增长的文化主导地位。</p>
 <p>但是，美国的观念毫无疑问是建立在犹太－基督教价值观和一个核心的基本信仰的基础上，即人人生而平等，造物主赋予他们某些不可剥夺的权利。为了保障这些权利，在民众中建立政府，其正当权力来自于被统治者的同意。简而言之，这就是美国例外论。作为人类，美国当局对这些原则的运用并不完美，但他们准备付出可怕而血腥的内战的代价，以阻止（有些州）为了保留奴隶制而脱离联邦。</p>
 <p>长期以来，在纽约、好莱坞和旧金山的流行思潮很快就被整个西方世界所采用，特别是在英语圈国家。但是，来自美国精英阶层的思想已不必与美国例外论相一致，而是越来越多地与新马克思主义教条相一致。</p>
@@ -25,9 +27,9 @@
 <p>该法则称，任何不是明显右翼的组织或企业，随着时间的推移都会变成左翼。</p>
 <p>加上北京的财富、宗教的衰落和第一代人受教育程度的降低，这种倾向和吸引力对新马克思主义左派来说是无法抗拒的。</p>
 <h2>教条精选</h2>
-<p>最近，由于我对<ahref="https://github.com/cxovwc3509/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>（特朗普）总统任期的结论，我遭遇了新马克思主义的教条——批判性种族理论的攻击。</p>
-<p>概括地说，我的看法是，<ahref="https://github.com/cxovwc3509/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>总统仅用一个任期就成功地扭转了美国的颓势，不仅在经济上，而且在意识形态和道德上。有人对我的结论进行了情绪化的攻击，最后用一种似乎是现在标准默认的异化形式回答的：“你是个种族主义混蛋。”考虑到我的欧亚血统，这样的回复非常不恰当。</p>
-<p>批判性种族理论只是美国大学里流传的众多谬论之一，它最有力的支持者是民主党。民主党以前曾经强烈支持奴隶制和种族隔离，现在由一位总统领导，他本人曾是一位杰出的种族隔离主义参议员，在最近的竞选活动中声称，任何不投他票的非裔美国人，不能称自已是黑人。</p>
+<p>最近，由于我对<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>（特朗普）总统任期的结论，我遭遇了新马克思主义的教条——批判性种族理论的攻击。</p>
+<p>概括地说，我的看法是，<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>总统仅用一个任期就成功地扭转了美国的颓势，不仅在经济上，而且在意识形态和道德上。有人对我的结论进行了情绪化的攻击，最后用一种似乎是现在标准默认的异化形式回答的：“你是个种族主义混蛋。”考虑到我的欧亚血统，这样的回复非常不恰当。</p>
+<p>批判性种族理论只是美国大学里流传的众多谬论之一，它最有力的支持者是民主党。民主党以前曾经强烈支持奴隶制和种族隔离，现在由一位总统领导，他本人曾是一位杰出的种族隔离主义参议员，在最近的竞选活动中声称，任何不投他票的非裔美国人，不能称自己是黑人。</p>
 <p>所有这些和类似的谬论都是新马克思主义武装的一部分，旨在摧毁西方文明。</p>
 <p>《时代》周刊最近披露，“重要人物”阴谋集团的目的不仅仅是要推翻川普，他们是由持这种信仰的人和亿万富翁的新马克思主义者，组成的统一战线。这也是为了确保没有其他局外人敢剥夺他们沼泽的权力。联合这个阴谋集团的是北京提供的聚宝盆和马克思主义天堂，即使是以美国和西方的衰落为代价。</p>
 <p>这些伪科学谬论悄悄地塞进了我们已沦陷的教学机构的课程中，不管是哪个政党执政。（英国著名小说家）奥威尔式的官腔通常被用来限制话语中认可的思想。因此，使用“性别”（gender，文化、社会性别）而不是“性”（sex，生物学性别），就等于承认，是男是女不是由出生时就决定的，这是一个选择的问题。现任总统大笔一挥就毁掉了妇女的体育活动以及妇女入厕的安全等问题，说明了这一做法的严重后果。</p>
@@ -38,12 +40,12 @@
 <p>对于源自美国的新马克思主义教条，北京有两种应对方法。要么给予他们名义上的支持，要么忽略任何没有好处的东西，大概包括社会性别理论，因为知道这样做的好处有助于削弱西方。</p>
 <p>如果你认为这些教条都是新的，那就大错特错了。</p>
 <p>最近，总统拜登参加弥撒，悼念据说死于中共病毒（或死于其它原因）的50万美国人，乐队演奏了《奇异恩典》（Amazing Grace）。</p>
-<p>但是，拜登恢复了川普总统之前未批准的90亿美元的对外援助，这笔钱用于堕胎或杀死外国婴儿。最高法院在1973年罗伊诉韦德案（Roe v Wade）中，基于妇女选择权的谬论，确认妇女决定是否继续怀孕的权利受宪法保护（此判决等于承认美国堕胎的合法化）。有了这个先例，此后，约有3,000万、多数是健康的美国婴儿（黑人婴儿不成比例地高）被杀死，并没有乐队为这些婴儿演奏乐曲。</p>
+<p>但是，拜登恢复了川普总统之前未批准的90亿美元的对外援助，这笔钱用于堕胎或杀死外国婴儿。最高法院在1973年罗伊诉韦德案（Roe v. Wade）中，基于妇女选择权的谬论，确认妇女决定是否继续怀孕的权利受宪法保护（此判决等于承认美国堕胎的合法化）。有了这个先例，此后，约有3,000万、多数是健康的美国婴儿（黑人婴儿不成比例地高）被杀死，并没有乐队为这些婴儿演奏乐曲。</p>
 <p>这个最老旧的武装教条之一，现在被应用于人出生前甚至出生后，这表明了马克思主义的一个内在倾向：只要方便，就可以随时剥夺人的生命，在马克思主义国家，可能夺走了一亿多人的生命。</p>
 <p>近年来，迄今为止，反击新马克思主义教条传播，最有力、最有效的人是美国总统川普。在短短一个任期内，他就让新马克思主义统一战线陷入了困境。他过去、现在仍然是对抗这种邪恶的堡垒。</p>
 <p>他给美国人民和他们的朋友树立了榜样，唯一的解决办法就是合法、爱国、和平地抵抗。</p>
-<p>这就是为什么《时代》周刊提到的阴谋集团想尽一切办法把川普赶下台的原因，但是，他们试图确保他不能回来、也没有追随者会试图模仿他的努力都以失败而告终。</p>
-<p>唐纳德?川普是对的。随着美国例外论的成功重新确立，也只有这样，最好的时刻还没有到来。</p>
+<p>这就是为什么《时代》周刊提到的阴谋集团想尽一切办法把川普赶下台的原因，但是，他们阻止川普回归和他的追随者效仿他的企图失败了。</p>
+<p>唐纳德?川普是对的。通过成功地再次确立美国伟大的理念，只要这样，最好的将会到来。</p>
 <p><em>原文：<ahref="https://www.theepochtimes.com/donald-trump-bastion-against-marxist-america_3727621.md#1">Donald Trump: Bastion Against Marxist America</a>刊登在于英文《大纪元时报》</em></p>
 <p><em>作者简介：</em></p>
 <p><em>大卫?弗林特（David Flint，A.M.）是澳大利亚新闻理事会和澳大利亚广播管理局的前主席，还是一位名誉法学教授。</em></p>
@@ -54,41 +56,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/cxovwc3509/djy/blob/master/gb/20/8/23/n12351544.md#1">【名家专栏】马克思主义的危害</a></li>
-<li><a href="https://github.com/cxovwc3509/djy/blob/master/gb/21/2/24/n12772531.md#1">【名家专栏】马克思主义教授的错觉</a></li>
-<li><a href="https://github.com/cxovwc3509/djy/blob/master/gb/21/3/6/n12793887.md#1">【名家专栏】抵制社会主义 九步拯救美国</a></li>
-<li><a href="https://github.com/cxovwc3509/djy/blob/master/gb/21/3/15/n12812472.md#1">【名家专栏】马克思主义者控制内华达民主党</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/8/23/n12351544.md#1">【名家专栏】马克思主义的危害</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/2/24/n12772531.md#1">【名家专栏】马克思主义教授的错觉</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/3/6/n12793887.md#1">【名家专栏】抵制社会主义 九步拯救美国</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/3/15/n12812472.md#1">【名家专栏】马克思主义者控制内华达民主党</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/cxovwc3509/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/7/n11707614.md#1" target="_blank">宁静：刘三姐到底是“歌仙”还是红卫兵？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/10/n11782021.md#1" target="_blank">读《转法轮》澳洲西人找到生命意义</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/14/n10217581.md#1" target="_blank">极限饥饿：灵与肉的双重凌迟（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/10/11/n4547562.md#1" target="_blank">我们告诉未来：封锁与反封锁</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/cxovwc3509/djy/blob/master/gb/21/3/12/n12806462.md#1">美国数百人目击UFO 电视台派记者搭机调查</a></li>
-<li><a href="https://github.com/cxovwc3509/djy/blob/master/gb/21/3/14/n12810261.md#1">女童讲前世记忆：911事件在世贸大楼遇难</a></li>
-<li><a href="https://github.com/cxovwc3509/djy/blob/master/gb/21/2/26/n12777823.md#1">老翁用一计 让富家子败光了财产 结果感人</a></li>
-<li><a href="https://github.com/cxovwc3509/djy/blob/master/gb/21/3/11/n12805471.md#1">【未解之谜】里根总统?亲历鬼门关</a></li>
-<li><a href="https://github.com/cxovwc3509/djy/blob/master/gb/21/2/28/n12780478.md#1">预言试析：从大禹治水看到三峡大坝的命运？</a></li>
-<li><a href="https://github.com/cxovwc3509/djy/blob/master/gb/21/3/18/n12818458.md#1">【远见快评】美日声明空前强硬 中美未谈先开打</a></li>
-<li><a href="https://github.com/cxovwc3509/djy/blob/master/gb/21/3/17/n12817513.md#1">【珍言真语】张怀烈：打科兴命危 信中共赔命</a></li>
-<li><a href="https://github.com/cxovwc3509/djy/blob/master/gb/21/3/18/n12818469.md#1">【横河直播】美制裁中港高官 AZ疫苗怎么了？</a></li>
-<li><a href="https://github.com/cxovwc3509/djy/blob/master/gb/21/3/16/n12813952.md#1">生命奇迹 11岁童天生心脏外露仍乐观面对</a></li>
-<li><a href="https://github.com/cxovwc3509/djy/blob/master/gb/21/3/16/n12815533.md#1">美中会谈选阿拉斯加 川普：我绝不这么做</a></li>
-<li><a href="https://github.com/cxovwc3509/djy/blob/master/gb/21/3/16/n12815434.md#1">阿里巴巴被整 习近平向科技巨头开刀</a></li>
-<li><a href="https://github.com/cxovwc3509/djy/blob/master/gb/21/3/18/n12818821.md#1">金曲歌后詹雅雯暴瘦8公斤 确诊罹帕金森氏症</a></li>
-<li><a href="https://github.com/cxovwc3509/djy/blob/master/gb/21/3/16/n12815655.md#1">郭富城3岁女儿正脸首曝光 模样获赞超可爱</a></li>
-<li><a href="https://github.com/cxovwc3509/djy/blob/master/gb/21/3/15/n12813109.md#1">刘德华晒被隔离视频 紧皱眉头直呼很想家</a></li>
-<li><a href="https://github.com/cxovwc3509/djy/blob/master/gb/21/3/17/n12816948.md#1">林依晨克服远距婚姻 3年没新作常“犯戏瘾”</a></li>
-<li><a href="https://github.com/cxovwc3509/djy/blob/master/gb/21/3/16/n12815466.md#1">陈可辛电影《李娜》更名 胡歌和郝蕾主演</a></li>
-<li><a href="https://github.com/cxovwc3509/djy/blob/master/gb/21/3/16/n12814043.md#1">濒死大象获救 12年后认出恩人 伸长鼻打招呼</a></li>
-<li><a href="https://github.com/cxovwc3509/djy/blob/master/gb/21/3/16/n12814298.md#1">看大型游轮通行世界最深运河 惊险无比</a></li>
-<li><a href="https://github.com/cxovwc3509/djy/blob/master/gb/21/3/2/n12785084.md#1">别再责怪孩子了 医师：对他说好话才会出现奇迹</a></li>
-<li><a href="https://github.com/cxovwc3509/djy/blob/master/gb/21/3/17/n12816901.md#1">全球首创 3D列印社区将出现在美国加州</a></li>
-<li><a href="https://github.com/cxovwc3509/djy/blob/master/gb/21/3/17/n12816611.md#1">为什么美国的校车上有多条黑线？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740262.md#1">【秦鹏直播】不让戴口罩 李克强和习杠上了？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740815.md#1">【微视频】粮价涨多少？美国争论中国关税</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740248.md#1">【远见快评】美媒曝东航坠毁是人为 东航回应</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739318.md#1">备战台海 广东高层会议秘密录音曝光</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739256.md#1">李克强讲话“上墙”党媒争相报 释何信号</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736831.md#1">11种营养和饮食 改善成人过动症</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cxovwc3509/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cxovwc3509/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/3/18/n12820071.htm">【名家专栏】对抗马克思主义的美国堡垒</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/3/18/n12820071.htm">【名家专栏】对抗马克思主义的美国堡垒</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cxovwc3509/djy/blob/master/gb/21/3/18/n12820071.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cxovwc3509/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cxovwc3509/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cxovwc3509/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cxovwc3509/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cxovwc3509/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cxovwc3509/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cxovwc3509/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cxovwc3509/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cxovwc3509/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cxovwc3509/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cxovwc3509/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cxovwc3509/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cxovwc3509/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cxovwc3509/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cxovwc3509/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cxovwc3509/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cxovwc3509/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cxovwc3509/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/cxovwc3509/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cxovwc3509/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cxovwc3509/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cxovwc3509/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cxovwc3509/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cxovwc3509/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/cxovwc3509/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cxovwc3509/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cxovwc3509/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cxovwc3509/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cxovwc3509/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cxovwc3509/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cxovwc3509/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cxovwc3509/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cxovwc3509/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cxovwc3509/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cxovwc3509/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cxovwc3509/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cxovwc3509/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cxovwc3509/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cxovwc3509/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cxovwc3509/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cxovwc3509/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cxovwc3509/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cxovwc3509/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cxovwc3509/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cxovwc3509/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cxovwc3509/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cxovwc3509/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cxovwc3509/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/21/3/18/n12820071.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
